--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -349,7 +349,7 @@ A similar analysis for void fraction was also conducted by Wilmer et al. for met
   \caption{On the left: scatterplot of the xenon uptake as a function of the selectivity and labeled by the values of the void fraction. On the right: scatterplot of the selectivity and the void fraction labeled by the quantity of xenon adsorbed. The selectivity and uptake are calculated by a GCMC simulation of a 20:80 Xe/Kr mixture.}\label{fgr:vol}
 \end{figure}
 
-By conducting a similar analysis to that performed for surface areas, but this time focusing on the void fraction using Figure~\ref{fgr:3D_hist_sa_vol} (right), it is possible to identify different intervals of void fractions that correspond to highly selective materials. For instance, selectivity values above $92$ correspond to materials with a porosity ranging from {$0$\%} to {$37.5$\%} (with a higher peak between {$12.5$\%} and {$25$\%}). Selectivity values between $92$ and $35$ can be found in materials with a void fraction ranging from {$0$\%} to {$50.0$\%} and more frequently concentrated between {$12.5$\%} and {$37.5$\%}. Selectivity values between $35$ and $13$ can be observed in materials with a void fraction ranging from {$0$\%} to {$75.0$\%}, with a bell-shaped distribution centered around {$31$\%}. As selectivity values decrease, the peak of the distribution shifts toward higher void fraction values, indicating a preference for lower porosity (below {$25$\%}) in terms of selectivity performance. However, similar to surface areas, the void fraction is not a deterministic variable — the void fraction alone does not determine the material's performance. Therefore, it is necessary to investigate whether adding another variable, such as pore size, as a joint variable, can provide a better characterization of the material's performance. As a temporary conclusion, the most selective materials seem to be little porous with void fraction not exceeding $0.5$ and with an internal surface not exceeding \SI{2500}{\square\m\per\cubic\cm}. These materials have pores that are specialized for xenon adsorption, which will be confirmed by the following discussion.
+By conducting a similar analysis to that performed for surface areas, but this time focusing on the void fraction using Figure~\ref{fgr:3D_hist_sa_vol} (right), it is possible to identify different intervals of void fractions that correspond to highly selective materials. For instance, selectivity values above $92$ correspond to materials with a porosity ranging from {$0$\%} to {$37.5$\%} (with a higher peak between {$12.5$\%} and {$25$\%}). Selectivity values between $92$ and $35$ can be found in materials with a void fraction ranging from {$0$\%} to {$50.0$\%} and more frequently concentrated between {$12.5$\%} and {$37.5$\%}. Selectivity values between $35$ and $13$ can be observed in materials with a void fraction ranging from {$0$\%} to {$75.0$\%}, with a bell-shaped distribution centered around {$31$\%}. As selectivity values decrease, the peak of the distribution shifts towards higher void fraction values, indicating a preference for lower porosity (below {$25$\%}) in terms of selectivity performance. However, similar to surface areas, the void fraction is not a deterministic variable — the void fraction alone does not determine the material's performance. Therefore, it is necessary to investigate whether adding another variable, such as pore size, as a joint variable, can provide a better characterization of the material's performance. As a temporary conclusion, the most selective materials seem to be little porous with void fraction not exceeding $0.5$ and with an internal surface not exceeding \SI{2500}{\square\m\per\cubic\cm}. These materials have pores that are specialized for xenon adsorption, which will be confirmed by the following discussion.
 
 \subsubsection{Pore Size and selectivity}
 
@@ -700,7 +700,7 @@ In the case of \texttt{MISQIQ}, the pure-component Xe isotherm depicted in Figur
 
 The materials \texttt{BAEDTA01}, \texttt{VIWMOF}, \texttt{LUDLAZ}, \texttt{WOJJOV}, and \texttt{VAPBIZ} fall into the category of having more than one available adsorption site, resulting in a significant drop in selectivity from low to ambient pressure. The pure-component isotherms and the representation of the materials loaded in xenon and krypton molecules (presented in the supporting information of the Ref.~\cite{Ren_2021} Figures~S19-23) confirm the existence of at least two distinct adsorption sites in each material. The preferential filling of the most selective sites (i.e., the most favorable for Xe) occurs at low loading, while the less selective sites are populated as the pressure increases. Consequently, a net decrease in selectivity at ambient pressure is observed for these materials. The existence of different types of adsorption sites and their impact on Xe/Kr selectivity (at non-zero pressure) suggests the inclusion of this factor in the screening of pure-component isotherms without the need for explicit multi-component GCMC simulations.
 
-\section{Toward the development of new screening tools}
+\section{Towards the development of new screening tools}
 
 In the current state of the art on Xe/Kr separation by adsorption in nanoporous materials, many studies have focused on establishing structure/property relationships, determining theoretical performance limits, and identifying top-performing materials, for both existing experimental structures and novel hypothetical structures yet to be synthesized. To provide a better understanding of the thermodynamics underlying Xe/Kr separation and the microscopic origins of selectivity at low and ambient pressure, a high-throughput screening of Xe, Kr was conducted as well as Xe/Kr mixtures in 12\,020 experimental open-framework materials. In addition to structural descriptors such as pore sizes, volume, and surface area, thermodynamic quantities was considered to gain insights into the key factors yielding a high selectivity.
 
