--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -36,7 +36,7 @@ Using molecular simulations of the adsorbate displacements, I will try to model 
 
 \subsection{Molecular dynamics}
 
-Molecular dynamics are used to simulate the motion of molecules in a given system. It is usually used to calculate thermodynamic averaging by using a hypothesis on the equivalence between the time averaging and ensemble averaging (ergodic hypothesis); in other system configurations, we can determine mechanical properties, thermodynamic properties or chemical properties. But here, I am more interested in the calculation of diffusion coefficients of monoatomic molecules, and the discussion will be driven toward averaging trajectories to obtain MSD values.
+Molecular dynamics are used to simulate the motion of molecules in a given system. It is usually used to calculate thermodynamic averaging by using a hypothesis on the equivalence between the time averaging and ensemble averaging (ergodic hypothesis); in other system configurations, we can determine mechanical properties, thermodynamic properties or chemical properties. But here, I am more interested in the calculation of diffusion coefficients of monoatomic molecules, and the discussion will be driven towards averaging trajectories to obtain MSD values.
 
 \subsubsection{Simulation details}
 
@@ -78,7 +78,7 @@ To efficiently sample the trajectory into sub-trajectories that are independent 
 
 The major drawback of this method is that we need to define a timescale $\left\{\delta\tau, \ldots, K\delta\tau\right\}$ beforehand. In order to be able to access the different timescales in a single simulation, we can perform a multiple-window algorithm developed by Dubbeldam et al.\ and used in the RASPA2 software to compute mean squared displacements (MSD) in a molecular dynamics simulation.
 
-The different time windows are defined in a recursive way using the default parameters of RASPA2. The first time window is defined by $K=25$ displacements of duration $\delta t, 2\delta t, \ldots,(K-1)\delta t$ with a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be changed with the parameter ``SampleMSDEvery''). The second window is now based on a sampling time $\delta \tau_1 = K\delta t$ and the sub-trajectories will have durations of $\left(\tau_1^{(1)} = \delta\tau_1\right),\ldots,\left(\tau_1^{(K-1)} = (K-1)\delta\tau_1\right)$. We, then, repeat the process recursively, and the $i$\e{th} window would have a sampling time of $\delta \tau_i = K^i\delta t$ and sub-trajectories durations of $\left(\tau_i^{(1)} = \delta\tau_i\right),\ldots,\left(\tau_i^{(K-1)} = (K-1)\delta\tau_i\right)$, for each of them a window algorithm similar to the one described above is applied. The algorithm stops when no window can be generated anymore, when $\tau_n^{(k)}>t\e{tot}$ with $n$ being the index of the window and $k$ the index in the single-window algorithm that defines the time we want to sample with regard to a sampling time $\delta\tau_i$. The timescale $\delta \tau_i = K^i\delta t$ we sample follows a geometrical progression and very different timescales can be accessed using this method in order to find the timescale corresponding to the diffusion regime (linear relation between the MSD and the duration of the sub-trajectories used in the averaging). For example on Figure~\ref{fgr:MSD_init}, we can see the different timescales and the exponent value $b$ of a fit to a function of type $x \mapsto ax^b$ for the different time windows --- values of $b$ near $1$ can be associated to a diffusion regime. The determination of the diffusion coefficient is now reduced to a simple fitting problem that will be explained in more details in the presentation of the diffusion coefficient screening in section~\ref{sct:md_screening}.
+The different time windows are defined in a recursive way using the default parameters of RASPA2. The first time window is defined by $K=25$ displacements of duration $\delta t, 2\delta t, \ldots,(K-1)\delta t$ with a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be changed with the parameter ``SampleMSDEvery''). The second window is now based on a sampling time $\delta \tau_1 = K\delta t$ and the sub-trajectories will have durations of $\left(\tau_1^{(1)} = \delta\tau_1\right),\ldots,\left(\tau_1^{(K-1)} = (K-1)\delta\tau_1\right)$. We, then, repeat the process recursively, and the $i$\e{th} window would have a sampling time of $\delta \tau_i = K^i\delta t$ and sub-trajectories durations of $\left(\tau_i^{(1)} = \delta\tau_i\right),\ldots,\left(\tau_i^{(K-1)} = (K-1)\delta\tau_i\right)$, for each of them a window algorithm similar to the one described above is applied. The algorithm stops when no window can be generated anymore, when $\tau_n^{(k)}>t\e{tot}$ with $n$ being the index of the window and $k$ the index in the single-window algorithm that defines the time we want to sample with regard to a sampling time $\delta\tau_i$. The timescale $\delta \tau_i = K^i\delta t$ we sample follows a geometrical progression and very different timescales can be accessed using this method in order to find the timescale corresponding to the diffusion regime (linear relation between the MSD and the duration of the sub-trajectories used in the averaging). For example on Figure~\ref{fgr:MSD_init}, we can see the different timescales and the exponent value $b$ of a fit to a function of type $x \mapsto ax^b$ for the different time windows --- values of $b$ near $1$ can be associated to a diffusion regime. The determination of the diffusion coefficient is now reduced to a simple fitting problem that will be explained in more details in the presentation of the diffusion coefficient screening in the section~\ref{sct:md_screening}.
 
 This methodology can then be used replicated to thousands of structures to characterize the diffusion properties of these materials. Several screenings have already been carried out in the literature as presented in the chapter 1 in the section dedicated to transport property screenings. I will now dive a little deeper in the prediction of these quantities using machine learning.
 
@@ -127,7 +127,7 @@ In this section, I will focus on the second approach that relies on the determin
 
 In practice, we need to calculate an energy grid that will be used to detect all the different components of lattice. The algorithm iterates over different energy values from $E\e{min}+\delta E, \ldots, E\e{min}+N\delta E$ so that the maximum energy is below an energy cutoff we fixed at the start $E\e{min}+N\delta E<E\e{cutoff}$. At the initial step, the clusters of grid points with an energy below $E\e{min}+\delta E$ are formed naturally depending on whether they are connected or not. Then, at an iteration level $L$, the previous clusters found at iteration $L-1$ are grown layer by layer (one layer corresponds to the immediate neighbors on the grid), as shown on Figure~\ref{fgr:tutrast}. If the layer touches another cluster, then a boundary point is identified --- it is only accepted if the energy difference between minimum energy of the two touching basins and the boundary point value is high enough, else the barrier is negligible, and the basins are merged. At the end, the boundary values will be clustered and assigned as the transition surface between different pairs of adsorption basins. If the points of basins and boundary surfaces are connected all through, then we can define a tunnel in which diffusion can occur. Finally, when we iterated enough steps, and tunnels with different basins separated by transition state surfaces are defined. We can now run a kinetic Monte Carlo to determine the diffusion coefficient within each tunnel. The diffusion coefficient in the material will correspond to a weighted average of the diffusion coefficient in each tunnel, the weight simply corresponds to the probability of presence in each tunnel, which corresponds to the sum of the Boltzmann factors (proportional to the Henry coefficient in a given tunnel). 
 
-This approach is very promising since it is much more efficient than the MD simulation based techniques. With an implementation in Matlab (not very computationally efficient), the code is already out-performing most of the MD simulations for diffusion coefficient calculation, with a minimal cost in accuracy as shown in their screening of diffusion coefficients in zeolites. By using the C++ programming language, I tried to rewrite the algorithm for a more efficient search of the transition states. At this point of the development, I stopped at the determination of the diffusion activation energy which is independent of the detection of the transition state. And, in section~\ref{sct:algo_diff}, I will give the algorithmic detail for the determination of the diffusion activation energy in nanoporous materials using our in-house algorithm as well as the projected development to achieve a faster lattice kinetic Monte Carlo simulation inspired by the TuTraST algorithm.
+This approach is very promising since it is much more efficient than the MD simulation based techniques. With an implementation in Matlab (not very computationally efficient), the code is already out-performing most of the MD simulations for diffusion coefficient calculation, with a minimal cost in accuracy as shown in their screening of diffusion coefficients in zeolites. By using the C++ programming language, I tried to rewrite the algorithm for a more efficient search of the transition states. At this point of the development, I stopped at the determination of the diffusion activation energy which is independent of the detection of the transition state. And, in the section~\ref{sct:algo_diff}, I will give the algorithmic detail for the determination of the diffusion activation energy in nanoporous materials using our in-house algorithm as well as the projected development to achieve a faster lattice kinetic Monte Carlo simulation inspired by the TuTraST algorithm.
 
 
 \section{Self-diffusion screening}\label{sct:md_screening}
@@ -295,7 +295,7 @@ If we look into the details of these structures, we can see that they combine la
 \end{figure}
 
 
-We can see that at higher pressure, some materials experience a shift toward lower selectivity values. And, only 2 structures have an ambient-pressure selectivity over $40$: the MOFs with the following CSD code \texttt{XUNSOQ}\autocite{Abrahams_2014} and \texttt{GUMDEZ}\autocite{Yin_2014}  (see Table~\ref{table:diff}). Most of these materials actually have a high value of cavity size, only structures with LCD near \SI{6}{\angstrom} are left in this area of the plot. We can also note that the dimension of the channel is equal to one too, which starts to brush a picture of the interesting materials. These materials are constituted of unidimensional channels with a small pore sizes so that the selectivity is conserved even at higher pressure conditions. If we broaden the scope to the structures with a selectivity higher than $30$ instead of $40$, we now have 38 structures that also have similar features with rather low pore sizes and low channel dimensionality. Some of these structures have more or less kept their selectivity such as \texttt{QOZDOY}\autocite{Zhang_2001} and wasn't detected on the pre-screening on the low-pressure selectivity (Figure~\ref{fgr:perm_selec0}), but other structures, such as the MOF \texttt{MISQIQ}\autocite{Tong_2013}, actually dropped significantly in selectivity values from infinite dilution to ambient pressure (see Table~\ref{table:diff}). 
+We can see that at higher pressure, some materials experience a shift towards lower selectivity values. And, only 2 structures have an ambient-pressure selectivity over $40$: the MOFs with the following CSD code \texttt{XUNSOQ}\autocite{Abrahams_2014} and \texttt{GUMDEZ}\autocite{Yin_2014}  (see Table~\ref{table:diff}). Most of these materials actually have a high value of cavity size, only structures with LCD near \SI{6}{\angstrom} are left in this area of the plot. We can also note that the dimension of the channel is equal to one too, which starts to brush a picture of the interesting materials. These materials are constituted of unidimensional channels with a small pore sizes so that the selectivity is conserved even at higher pressure conditions. If we broaden the scope to the structures with a selectivity higher than $30$ instead of $40$, we now have 38 structures that also have similar features with rather low pore sizes and low channel dimensionality. Some of these structures have more or less kept their selectivity such as \texttt{QOZDOY}\autocite{Zhang_2001} and wasn't detected on the pre-screening on the low-pressure selectivity (Figure~\ref{fgr:perm_selec0}), but other structures, such as the MOF \texttt{MISQIQ}\autocite{Tong_2013}, actually dropped significantly in selectivity values from infinite dilution to ambient pressure (see Table~\ref{table:diff}). 
 
 When considering the ambient-pressure selectivity, the large majority of highly selective materials actually have a rather low diffusion selectivity (lower than $0.1$), as shown on Figure~\ref{fgr:perm_selec2080} (this was not the case for the low-pressure selectivity). This result suggest that a trade-off between adsorption selectivity and diffusion selectivity is actually needed. In my screening approach, I decided to lower the adsorption diffusivity to values around $40$ to allow for higher diffusion selectivity values, because up until now standard screenings in the literature\autocite{Simon_2015,Chung_2019} and in my published work~\cite{Ren_2021} only maximized the adsorption selectivity --- this equivalent to working on the lower right side of the plots of Figure~\ref{fgr:perm_selec2080}. To improve the former approach, I included a kinetic constraint in our screening. Another approach would be to optimize the perm-selectivity also known as the membrane selectivity (equation~\ref{eq:membrane_selec}), but it would be the solution to another application, the membrane separation, which is broadly studied in the literature\autocite{Anderson_2017,Wang_2022}. In the screening I presented here, we would like to find thermodynamically selective materials that are not limited by diffusion, and some interesting identified materials will be further studied in the following subsection. 
 
@@ -336,7 +336,7 @@ In this section, I will look into the details of the comparative transport and a
 \texttt{MISQIQ}~\cite{Tong_2013} & 140 & 37 &  4.6 & 4.5 &  1.4 &  2$\times$10\ex{-4} & 2.3 \\
 \hline
 \end{tabular}
-\caption{Transport and thermodynamic performances of top performing structures of CoRE MOF 2019 screened out by the approach developed in section~\ref{sct:diff_screen}. The thermodynamic properties are determined using xenon uptake at \SI{1}{\bar} and \SI{298}{\kelvin}, $s_0\ex{Xe/Kr}$ and $s_1\ex{Xe/Kr}$ that correspond to the xenon/krypton adsorption selectivity values respectively at infinite dilution and ambient pressure condition. The pore size is defined as the largest cavity along a free diffusion path D$_{if}\ex{UFF}$ and the channel size is defined using the pore limiting diameter PLD\ex{UFF} using atom radii defined by the UFF. The transport properties are evaluated using the xenon/krypton diffusion selectivity $s\e{diff}\ex{Xe/Kr}$ and the xenon diffusion coefficient $D\e{diff}\ex{Xe}$ calculated by the MD-based screening presented above. }\label{table:diff}
+\caption{Transport and thermodynamic performances of top performing structures of CoRE MOF 2019 screened out by the approach developed in the section~\ref{sct:diff_screen}. The thermodynamic properties are determined using xenon uptake at \SI{1}{\bar} and \SI{298}{\kelvin}, $s_0\ex{Xe/Kr}$ and $s_1\ex{Xe/Kr}$ that correspond to the xenon/krypton adsorption selectivity values respectively at infinite dilution and ambient pressure condition. The pore size is defined as the largest cavity along a free diffusion path D$_{if}\ex{UFF}$ and the channel size is defined using the pore limiting diameter PLD\ex{UFF} using atom radii defined by the UFF. The transport properties are evaluated using the xenon/krypton diffusion selectivity $s\e{diff}\ex{Xe/Kr}$ and the xenon diffusion coefficient $D\e{diff}\ex{Xe}$ calculated by the MD-based screening presented above. }\label{table:diff}
 \end{table}
 
 The structure \texttt{ADOGEH}\autocite{Peikert_2012} was not found when crossing the transport data with ambient-pressure selectivity values by with the infinite dilution ones, which explains that the selectivity $s_1$ is rather low ($10$) compared to the other materials (over $35$). This structure was actually detected when looking at the selectivity $s_0$ at infinite dilution, because of its extraordinary diffusion selectivity around ($10$). This would mean that as membrane material, its selectivity would be around $100$, which is one of the highest. Even as an adsorption-based separation material, it has an outstanding low-pressure selectivity of $49$ coupled with the high diffusion selectivity it can be considered for some applications at very low partial pressure of xenon and krypton. 
@@ -354,12 +354,12 @@ The structure \texttt{ADOGEH}\autocite{Peikert_2012} was not found when crossing
     \includegraphics[width=\textwidth]{figures/5-diffusion/viz/ADOGEH_Kr.jpg}
     \caption{Kr energy grid in \texttt{ADOGEH}}\label{fgr:ADOGEH_Kr}
   \end{subfigure}
-  \caption{3D volume plot of the xenon (a) and krypton (b) interaction energy values inside the material \texttt{ADOGEH}\autocite{Peikert_2012} calculated using an energy grid as described in section~\ref{sct:grid}. }\label{fgr:ADOGEH}
+  \caption{3D volume plot of the xenon (a) and krypton (b) interaction energy values inside the material \texttt{ADOGEH}\autocite{Peikert_2012} calculated using an energy grid as described in the section~\ref{sct:grid}. }\label{fgr:ADOGEH}
 \end{figure}
 
 And even as an experimental material, the diffusion properties of xenon and krypton in this material are extremely interesting in themselves. On the Figure~\ref{fgr:perm_selec0}, only two materials have a diffusion selectivity over $10$, but the other one actually has a falsely high value of diffusion selectivity due to the above-mentioned randomness of the initial position in the MD simulation and the presence of two types of channel (see Figure~\ref{fgr:OQESAF}). \texttt{ADOGEH} is therefore the only material that shows such a high diffusion selectivity among all materials screened for their diffusion performance. In a unidimensional system, it is actually more natural to have a higher or equivalent diffusion coefficient for krypton than for xenon due to the obvious size difference. 
 
-It is possible to explain this exceptional by a special mechanism that happens in the tridimensional channel network of \texttt{ADOGEH}. As shown on Figure~\ref{fgr:ADOGEH}, for both xenon and krypton all dimensions are available for diffusion through the channels in the three cardinal directions. However, when we look at the sort of ``pocket'' (not a blocking pocket in the MD simulation) that connects the channels diagonally, the access to it is clearly not the same if we compare the two 3D energy grid plots. For xenon, on Figure~\ref{fgr:ADOGEH_Xe}, the connection is way thinner than for krypton, on Figure~\ref{fgr:ADOGEH_Kr}, for the same energy threshold. This can be interpreted as a higher energy barrier for xenon than for krypton to access this ``pocket''. But, why would this explain the unusual difference in diffusion coefficients for xenon and krypton? This can be explained by the fact that the directions in which a krypton can diffuse is therefore much higher, which means that it has a higher probability of turning around than xenon. To say it more explicitly, a xenon can diffuse in the 3D space by taking only 3 main directions, but a krypton would lose time deviating from the cardinal directions --- the same way as opening-up dimensions decreases the diffusion coefficient ($\langle{r(t)}^2\rangle=2d\tau$). Moreover, when a krypton takes the small channel toward the ``pocket'', it would have a non-negligible residence time inside, which further slows it down compared to a xenon. These ``pockets'' can be seen as traps for krypton, if it were a race between both adsorbate inside the nanoporous material. 
+It is possible to explain this exceptional by a special mechanism that happens in the tridimensional channel network of \texttt{ADOGEH}. As shown on Figure~\ref{fgr:ADOGEH}, for both xenon and krypton all dimensions are available for diffusion through the channels in the three cardinal directions. However, when we look at the sort of ``pocket'' (not a blocking pocket in the MD simulation) that connects the channels diagonally, the access to it is clearly not the same if we compare the two 3D energy grid plots. For xenon, on Figure~\ref{fgr:ADOGEH_Xe}, the connection is way thinner than for krypton, on Figure~\ref{fgr:ADOGEH_Kr}, for the same energy threshold. This can be interpreted as a higher energy barrier for xenon than for krypton to access this ``pocket''. But, why would this explain the unusual difference in diffusion coefficients for xenon and krypton? This can be explained by the fact that the directions in which a krypton can diffuse is therefore much higher, which means that it has a higher probability of turning around than xenon. To say it more explicitly, a xenon can diffuse in the 3D space by taking only 3 main directions, but a krypton would lose time deviating from the cardinal directions --- the same way as opening-up dimensions decreases the diffusion coefficient ($\langle{r(t)}^2\rangle=2d\tau$). Moreover, when a krypton takes the small channel towards the ``pocket'', it would have a non-negligible residence time inside, which further slows it down compared to a xenon. These ``pockets'' can be seen as traps for krypton, if it were a race between both adsorbate inside the nanoporous material. 
 
 
 Beyond the particular cases of \texttt{OQESAF} and \texttt{ADOGEH}, other nanoporous materials have lower diffusion selectivity values. For instance, all the other materials of Table~\ref{table:diff} have a diffusion selectivity between $0.2$ and $1.4$. Depending on the shape and the size distribution of the porous channels, we would have higher or lower values of diffusion selectivity and xenon diffusion coefficient values. For instance, as shown on Figure~\ref{fgr:porediff_b}, there seems to be a weak correlation between a pore size characteristics (LCD\ex{UFF}$-$PLD\ex{UFF}) and the diffusion performance for structures with a LCD\ex{UFF} value lower than \SI{6}{\angstrom} --- for these structures, pore size have a higher chance to influence the transport properties. This correlation is logically due to the fact that if this difference between LCD and PLD is high, the diffusing xenon will have to cross a higher energy barrier to move inside the channels, therefore decreasing the diffusion coefficient. If we consider, all structures available, the correlation disappears because in the materials with a higher LCD value the movement of the diffusing xenon is not influenced as much by the pore walls. And actually for values of LCD higher than \SI{7}{\angstrom}, the diffusion coefficient is rather stabilized around $10^{-5}$~\si{\square\cm\per\s} as shown on Figure~\ref{fgr:diff_H_lcd}. 
