--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-\chapter{Toward the next generation of screenings}
+\chapter{Towards the next generation of screenings}
 \vspace*{-1\baselineskip}
 
 \section{Limits of the current screening methodologies}
@@ -25,7 +25,7 @@ the detection of channels using a simple all-direction scanning algorithm on the
 
 To finish the implementation of the algorithm, the final step is to be able to detect the transition state surfaces that separate different clusters. This final mapping into basins connected by transition surfaces can then be used to run a simple kinetic Monte Carlo scheme and determine the diffusion coefficient. In the original paper of Mace et al.\autocite{Mace_2019}, the authors make the clusters with energy values below $E\e{min}+i\delta E$ grow layer by layer to clusters with energy values below $E\e{min}+(i+1)\delta E$. When a point of a layer of one cluster touches another cluster, this point can be considered as a transition point if the energy gap is high enough, else the two clusters merge together to form a unique cluster. The reason to use a loop over the energy values is to control the values of the transition points they can only between $E\e{min}+(i)\delta E$ and $E\e{min}+(i+1)\delta E$. If we think about it, the layer-by-layer growth does not find the highest energy point in a given direction as normally defined for transition states, instead they detect the points that are equidistant to the surface of two previous clusters. Both definitions are equivalent if $\delta E$ is infinitely small.
 
-To avoid using a computationally expensive layer-by-layer growth, it could be possible to assign a label using a breadth-first search to find. The boundary points between two connected components would be defined as the points that are ``equidistant'' to the clusters. The definition of equidistant depends ont the definition of the distance. I can either be directly defined using the grid cells, which corresponds to the Manhattan distance. This distance could be sensitive to the deformation of the unit cell. To use the cartesian distance, we would need to save a coordinate grid and implement a bucket queue based on the cartesian distances instead of a standard queue (as presented in section~\ref{sct:tutrast}).
+To avoid using a computationally expensive layer-by-layer growth, it could be possible to assign a label using a breadth-first search to find. The boundary points between two connected components would be defined as the points that are ``equidistant'' to the clusters. The definition of equidistant depends ont the definition of the distance. I can either be directly defined using the grid cells, which corresponds to the Manhattan distance. This distance could be sensitive to the deformation of the unit cell. To use the cartesian distance, we would need to save a coordinate grid and implement a bucket queue based on the cartesian distances instead of a standard queue (as presented in the section~\ref{sct:tutrast}).
 
 In the end of the thesis, I will be studying the different approaches: layer-by-layer growth, breadth-first search with a standard queue or a bucket queue prioritized using the cartesian distance, and compare their time and accuracy performance.
 
@@ -118,7 +118,7 @@ This approach does not give a complete picture of the flexibility effect on the 
 
 According to original paper on SBMOF-1,\autocite{Banerjee_2016} the theoretical selectivity calculated by UFF is around $70.6$. However, the experimental selectivity is much lower, around $16$. To solve this mystery, Witman et al. used a snapshot-based method to evaluate the effect of selectivity. The intrinsic flexibility lowers the selectivity, which goes in the right direction to explain the difference of selectivity, but it does not seem to capture the whole picture. 
 
-I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: \texttt{KAXQOR} and \texttt{KAXQIL}. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is loaded by water that forms big clusters inside the pores and therefore stretches the pore size toward higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at the structures resolved in the Nature Communications study\autocite{Banerjee_2016}, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated on Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
+I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: \texttt{KAXQOR} and \texttt{KAXQIL}. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is loaded by water that forms big clusters inside the pores and therefore stretches the pore size towards higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at the structures resolved in the Nature Communications study\autocite{Banerjee_2016}, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated on Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
 
 \begin{table}[t]
 \centering
@@ -162,7 +162,7 @@ As shown on Figure~\ref{fgr:ads_config}, the orientation of the hexane molecule 
     \includegraphics[height=0.6\textwidth]{figures/6-perspectives/QUXRUY.jpg}
     \caption{\texttt{QUXRUY}}\label{fgr:QUXRUY}
   \end{subfigure}
-  \caption{ An illustration of the effect of the orientation of hexane inside a SBMOF-1-like material. In \texttt{QUXRIM} (a), the carbon atoms are oriented toward the S atoms, whereas in \texttt{QUXRUY} (b) they are oriented toward the Ca atoms. This difference in the orientation could explain the different structural properties of the materials reported on Table~\ref{table:sbmof}. Color code: brown for C, white for H, red for O, cyan for Ca, yellow for S. The structure visualizations are generated using the VESTA software.\autocite{VESTA}}\label{fgr:ads_config}
+  \caption{ An illustration of the effect of the orientation of hexane inside a SBMOF-1-like material. In \texttt{QUXRIM} (a), the carbon atoms are oriented towards the S atoms, whereas in \texttt{QUXRUY} (b) they are oriented towards the Ca atoms. This difference in the orientation could explain the different structural properties of the materials reported on Table~\ref{table:sbmof}. Color code: brown for C, white for H, red for O, cyan for Ca, yellow for S. The structure visualizations are generated using the VESTA software.\autocite{VESTA}}\label{fgr:ads_config}
 \end{figure}
 
 Now that I characterized the adsorbate effect on a few example configurations, we can better understand the thought process that leads to the identification of \texttt{KAXQIL} as a candidate for Xe/Kr separation. The \texttt{KAXQIL} structure is actually representing the material loaded by water with large pores which enables a good interaction with a large molecule like xenon. For this reason, it was identified as a top selective material. However, when it was experimentally tested for low-pressure adsorption using the Henry constant, it is most likely that the pores are not stretched, which implies lower Henry constants than expected. The structures \texttt{UQEFAZ} or \texttt{KAXQOR} seem to a better description of this low-pressure case since the experimental selectivity values are much more consistent with their theoretical selectivity values. 
@@ -182,7 +182,7 @@ The transport can also be modulated by the adsorbate-induced flexibility of SBMO
   \caption{ Visualization of the pore size stretching effect using the GrAED algorithm. The xenon increases the LCD value while diminishing the PLD value. }\label{fgr:stretch}
 \end{figure}
 
-Now that we identified two completely different diffusion behaviors, we can extrapolate these results to hypothetical conditions. For instance, if there is a relation between the quantity of xenon inside the pores and the structural similarity toward \texttt{UQEFED}, then the material could kinetically limit the adsorption of xenon at a high loading of xenon. In other words, it could be kinetically harder to adsorb xenon at higher xenon loadings. But at lower xenon loading, it also means that there is no diffusion limitations as is suggested by the very steep mass transfer zone on the breakthrough curve of xenon on Figure~\ref{fgr:sbmof_breakthrough}. If we connect this result on the influence of flexibility on the transport properties to the one obtained on the adsorption process itself, the adsorption of xenon is also much more thermodynamically favorable at higher values of xenon loading. There seems to be a complex thermodynamics-kinetics trade-off as we articulated in the previous chapter since \texttt{KAXQIL} and \texttt{UQEFED} are structurally quite similar, but it occurs at higher partial pressure in xenon. At an industrial point of view, the inclusion of transport effects in the analysis highlights additional cost in adsorbing xenon at high loading values if this theoretical study is confirmed by experiments.
+Now that we identified two completely different diffusion behaviors, we can extrapolate these results to hypothetical conditions. For instance, if there is a relation between the quantity of xenon inside the pores and the structural similarity towards \texttt{UQEFED}, then the material could kinetically limit the adsorption of xenon at a high loading of xenon. In other words, it could be kinetically harder to adsorb xenon at higher xenon loadings. But at lower xenon loading, it also means that there is no diffusion limitations as is suggested by the very steep mass transfer zone on the breakthrough curve of xenon on Figure~\ref{fgr:sbmof_breakthrough}. If we connect this result on the influence of flexibility on the transport properties to the one obtained on the adsorption process itself, the adsorption of xenon is also much more thermodynamically favorable at higher values of xenon loading. There seems to be a complex thermodynamics-kinetics trade-off as we articulated in the previous chapter since \texttt{KAXQIL} and \texttt{UQEFED} are structurally quite similar, but it occurs at higher partial pressure in xenon. At an industrial point of view, the inclusion of transport effects in the analysis highlights additional cost in adsorbing xenon at high loading values if this theoretical study is confirmed by experiments.
 
 By using simple simulation methods (Widom insertion and MD) on rigid structures, I probed the effects of flexibility on both the adsorption and transport properties using experimentally resolved structures in different adsorption conditions. This study sheds light on the mystery around the experiment-theory discrepancies and opens up opportunities to understand similar problematic systems. In this study, I relied on the experimental data that was published on the SBMOF structure, the same resources are not always available for other systems and maybe an effort of data generation using either experiments or simulations should be performed in these cases. If generalized, this approach can even be automatically applied on a series of structures, opening up the possibility of ``flexibility-aware'' screenings in the future. Aware of the importance of both flexibility and transport effects, other studies have tried to incorporate both in a small-scale screening process.\autocite{Stanton_2022} The authors used a flexible forcefield MD simulations to determine the diffusion coefficient and DFT calculations at the adsorption site to assess the adsorption performance. The main issue of this method is its computational cost, but it can be an alternative solution to the one introduced here, when no prior knowledge is available on the structure’s flexibility. 
 
